--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Hello</h1>
-    <button>Click here</button>
+    <button id ="myButton">Click here</button>
     <script src="main.js"></script>
 </body>
 </html>
